1 problem 6th change

--- a/backEndSection/.env.example
+++ b/backEndSection/.env.example
@@ -8,4 +8,4 @@ MONGODB_URL=mongodb://your_mongodb_connection_string_here
 ACCESS_TOKEN_SECRET=your_jwt_secret_key_here
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://shopbycommerse.vercel.app/
